# sim-lidar-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  typedoc.json  vite.config.ts
.github/workflows/: ci.yml
src/: bvh.rs  lib.rs  raycaster.rs  sensor.rs
ts/src/: index.ts  three.ts  types.ts  worker.ts
ts/src/__tests__/: sim_lidar.test.ts  simulator.test.ts  three.test.ts  types.test.ts
ts/wasm/: sim_lidar_rs.d.ts
