[package]
name = "sim-lidar-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance simulated LiDAR sensor library for WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
glam = "0.29"
rand = "0.8"
rand_distr = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
